fix "external_url" persisting issue and persist also the external uri for artists from spotify